# rdpp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  helloworld.cpp
app/: CMakeLists.txt
app/src/: main.cpp
libs/client/: CMakeLists.txt
libs/client/src/: EncodePacket.cpp
libs/common/: CMakeLists.txt
libs/server/: CMakeLists.txt
libs/server/src/: ScreenRecorder.cpp  VideoEncoder.cpp
